beta/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
              name: nginx-port
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-index-file
          configMap:
            name: cm-nginx-index
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-poller
  name: nginx-poller
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-poller
  template:
    metadata:
      labels:
        app: nginx-poller
    spec:
      containers:
        - image: busybox
          name: busybox
          command:
            [
              "/bin/sh",
              "-c",
              "while true; do sleep 30; date; wget -qO- --timeout=5 'http://nginx.beta.svc.cluster.local:80'; done",
            ]
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
