beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: beta
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
